<resources>
    <string name="app_name">ReversISEC</string>

    <!-- Strings do menu principal -->
    <string name="contra_computador" translatable="false">VS COM</string>
    <string name="contra_jogador">VS Jogador</string>
    <string name="em_LAN" translatable="false">LAN</string>
    <string name="lanDialog">Pretende ser o servidor ou o cliente?</string>
    <string name="btnCliente">Cliente</string>
    <string name="btnServidor">Servidor</string>
    <string name="footer">Arquiteturas Móveis 18/19</string>

    <!-- Strings do menu definiçõse -->
    <string name="menu_perfil">Editar Perfil</string>
    <string name="menu_historico">Histórico</string>
    <string name="menu_creditos">Créditos</string>

    <!-- Strings do menu perfil -->
    <string name="btnEditar">Editar</string>
    <string name="hintUsername">Nickname</string>
    <string name="btnGuardar">Guardar</string>
    <string name="toastSaveNickname">Nickname modificado</string>
    <string name="guadarSucesso">Nickname alterado com sucesso</string>
    <string name="guadarFail">Não foi possível guardar as alterações</string>
    <string name="emptyFieldNick">O Nickname não pode ser nulo</string>
    <string name="nickInvalido">O Nickname introduzido não é válido</string>

    <!-- String GameActivity -->
    <string name="pontuacao" translatable="false">%1$d : %2$d</string>
    <string name="jogadaForaVez">Espere pela sua vez de jogar</string>
    <string name="jogadaInvalida">A jogada é inválida</string>
    <string name="btnJogar2X">Jogar 2X</string>
    <string name="btnPassarVez">Passar</string>
    <string name="tituloVenceu">%1$s venceu!</string>
    <string name="mensagemDialogo" translatable="false">%1$s - %2$d   :   %3$d - %4$s</string>
    <string name="tituloMudarModo">Mudar modo de jogo</string>
    <string name="mensagemMudarModo">Tem a certeza que prentende mudar o modo de jogo?</string>
    <string name="tituloSair">Sair</string>
    <string name="mensagemSair">Tem a certeza que pretende sair?</string>
    <string name="cartasAntesRonda5">Apenas pode usar as cartas a partir da ronda 5</string>
    <string name="error_netConn">Não existe ligação à rede</string>
    <string name="serverDlg_msg">A aguardar ligação do cliente...</string>
    <string name="jogadorSaiu">O jogador saiu. Agora irá passar a jogar contra o computador.</string>
    <string name="ipServidor">IP do servidor</string>


    <!-- Strings atividade camera -->
    <string name="btnTirarFoto">Tirar foto</string>
    <string name="permissionDenied">Não foram dadas as permissões para tirar a foto</string>

    <!-- String dialog new user -->
    <string name="title_newUser">Novo jogador</string>

    <!-- Strings historico -->
    <string name="itemPlayer1" translatable="false">%1$s - %2$d</string>
    <string name="itemPlayer2" translatable="false">%1$d - %2$s</string>

    <!-- Strings créditos -->
    <string name="realizadoPor">Trabalho realizado por:</string>


    <!-- Digitos permitidos nas caixas de texto -->
    <string name="digitsNickname" translatable="false">abcdefghijklmnopqrstuvwxyzçÇ.ãÃõÕáàóò()ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890é-ÉÀ </string>

</resources>
