<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PerfilActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_back"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:tint="@color/cinzaISEC"
                android:onClick="onBackButton"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginTop="30dp">
            <ImageView
                android:id="@+id/logo_app"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/logo_app"/>
        </LinearLayout>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="25dp"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        android:paddingBottom="50dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_foto_perfil_portrait">
                <ImageView
                    android:id="@+id/fotografia"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:src="@drawable/ic_account"
                    android:scaleType="fitXY"/>
            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                style="@style/AppTheme.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnEditar"
                app:icon="@drawable/ic_edit"
                android:onClick="goToCamera"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <com.google.android.material.textfield.TextInputLayout
                style="@style/AppTheme.TextInputLayout"
                android:id="@+id/nicknameLayout"
                app:errorEnabled="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hintUsername"
                app:counterMaxLength="10"
                app:counterEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nicknameText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:digits="@string/digitsNickname"
                    android:maxLines="1"
                    android:textSize="15sp"
                    android:maxLength="10"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnGuardar"
                style="@style/AppTheme.ButtonOutlined"
                android:layout_marginTop="10dp"
                android:onClick="saveNickname"/>

        </LinearLayout>

    </LinearLayout>




</LinearLayout>